--- a/index.htm
+++ b/index.htm
@@ -8,9 +8,46 @@
     <meta name="description" content="Evaluación de módulo 3" />
     <title>M3_Evaluacion-SimuladorMision</title>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
+
+    <style>
+      body {
+        font-family: "Poppins", sans-serif;
+        background: linear-gradient(135deg, #6a357f, #2cc389);
+        height: 100%;
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+        background-size: cover;
+        color: #f1f2f3;
+        margin: 40px;
+        font-size: 18px;
+      }
+    </style>
   </head>
   <body>
+    <h1>M3_Evaluación-SimuladorMision</h1>
+    <p>Este programa se puede ejecutar de dos maneras:</p>
 
+    <h2>Opción 1 - Ejecutar en Node.js</h2>
+    <ol>
+      <li>Abrir una terminal.</li>
+      <li>Ubicarse en la carpeta del proyecto.</li>
+      <li>Ejecutar: <code>node simuladorMision.js</code></li>
+    </ol>
+
+    <h2>Opción 2 - Ejecutar en navegador</h2>
+    <ol>
+      <li>Abrir el archivo <code>index.html</code> en un navegador web.</li>
+      <li>Abrir las herramientas de desarrollador (F12).</li>
+      <li>Ir a la pestaña "Consola".</li>
+      <li>Seguir las instrucciones que aparecen en la consola.</li>
+    </ol>
     <script src="simuladorMision.js"></script>
   </body>
 </html>
